# thefactory-modeltrainer

./: .gitignore  .prettierrc.json  README.md  app.js  index.html  package-lock.json  package.json  style.css  tsconfig.json  vitest.config.ts
docs/: CODE_STANDARD.md  FILE_ORGANISATION.md  TESTING.md  architecture.md  blackswan-pipeline-map.md  implementation-plan.md  model-training-standard.md
examples/cartpole/: .gitignore  README.md  pyproject.toml
examples/cartpole/.factory/: trainer.json
examples/cartpole/configs/: default.json
examples/cartpole/trainer/: config.py  evaluate.py  model.py  run.py  summary.py  train.py
examples/tabular/: .gitignore  README.md  pyproject.toml
examples/tabular/.factory/: trainer.json
examples/tabular/configs/: default.json
examples/tabular/trainer/: config.py  data.py  evaluate.py  model.py  run.py  summary.py  train.py
runner/: Dockerfile  README.md  agent.mjs
scripts/: import-blackswan-ledger.mjs  smoke.mjs  xaiParityCheck.mjs
src/: ModelTrainerTools.invalidation.test.ts  ModelTrainerTools.test.ts  ModelTrainerTools.ts  badRunsViewer.test.ts  bundleTableViewer.test.ts  comparisonViewer.test.ts  datasetsViewer.test.ts  explorationUtils.test.ts  explorationUtils.ts  explorationViewer.test.ts  fidelityLookahead.regression.test.ts  hypothesisViewer.test.ts  index.ts  migrateViewer.test.ts  modelTrainerConstants.ts  modelTrainerHelpers.test.ts  modelTrainerHelpers.ts  modelTrainerTypes.ts  modelTrainerUtils.test.ts  modelTrainerUtils.ts  modelsViewer.test.ts  pagingViewer.test.ts  runExportViewer.test.ts  xaiUtils.ts  (+2 more)
(+15 files in other folders)
