[project]
name = "cartpole-trainer"
version = "0.1.0"
description = "Executable specification of the model-training standard: CartPole RL trainer (SB3 + gymnasium, no data, trains in seconds on CPU)."
requires-python = ">=3.10"
dependencies = [
  "stable-baselines3>=2.0",
  "gymnasium>=0.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["trainer"]
